input2 borders update

--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -68,43 +68,75 @@
 
 }
 
-/*All table cells have top, bottom, and left borders, except right label cell & help cell
-.automizy-input2-table .automizy-input2-tr .automizy-input2-td:not(.automizy-input2-label-after-cell):not(.automizy-input2-help-icon-cell) {
-    border-top: 1px solid #dfe8f1;
-    border-bottom: 1px solid #dfe8f1;
-    border-left: 1px solid #dfe8f1;
+/*BORDER SETTINGS*/
+
+/*default*/
+.automizy-input2-tr .automizy-input2-td {
+    border: 1px solid #dfe8f1;
 }
 
-/*First cell has rounded left corners
-.automizy-input2-table .automizy-input2-tr .automizy-input2-td:first-child {
-    border-left: 1px solid #dfe8f1;
+/*cells after visible cells have no left border*/
+.automizy-input2-td:not(.automizy-hide) ~ .automizy-input2-td {
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+/*label & help cells have no borders*/
+.automizy-input2-td.automizy-input2-label-after-cell,
+.automizy-input2-td.automizy-input2-help-icon-cell {
+    border: none;
+}
+
+/*button cells have no border*/
+.automizy-input2-td.automizy-input2-button-left-cell,
+.automizy-input2-td.automizy-input2-button-right-cell {
+    border: none;
+}
+
+/*also have to modify button borders*/
+.automizy-input2-td.automizy-input2-button-left-cell .automizy-button a {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.automizy-input2-td.automizy-input2-button-right-cell .automizy-button a {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+/*right icons have no right borders if input also has right button*/
+.automizy-input2.automizy-input2-has-right-button .automizy-input2-td.automizy-input2-icon-right-cell {
+    border-right: none;
+}
+
+/*rounding icon borders, if they are first/last visible element*/
+.automizy-input2:not(.automizy-input2-has-left-button) .automizy-input2-td.automizy-input2-icon-left-cell {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
 
-/*The cell before the label has rounded right corners
-.automizy-input2-table .automizy-input2-tr .automizy-input2-td:nth-last-child(3) {
-    border-right: 1px solid #dfe8f1;
+.automizy-input2:not(.automizy-input2-has-right-button) .automizy-input2-td.automizy-input2-icon-right-cell {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
 
-/*all cells have rounded left borders which are after a hidden element
-.automizy-input2-td.automizy-hide + .automizy-input2-td {
+/*rounding spinner if it's the last visible element*/
+.automizy-input2:not(.automizy-input2-has-right-button):not(.automizy-input2-has-right-icon) .automizy-input2-td.automizy-input2-spinner-cell {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+/*rounding input right borders if it's the last visible element*/
+.automizy-input2:not(.automizy-input2-has-right-button):not(.automizy-input2-has-right-icon):not(.automizy-input2-has-custom-spinner):not(.automizy-input2-has-colorpicker) .automizy-input2-input-cell {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+/*rounding input left borders if it's the first visible element*/
+.automizy-input2:not(.automizy-input2-has-left-button):not(.automizy-input2-has-left-icon) .automizy-input2-input-cell {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-}
-
-/*cells after visible cells have no left border
-.automizy-input2-td:not(.automizy-hide) + .automizy-input2-td{
-    border-left: none;
-}
-*/
-
-/*all cells after the input cell have square left borders*/
-.automizy-input2-td.automizy-input2-input-cell ~ .automizy-input2-td{
-    border-top-left-radius: 0 !important;
-    border-bottom-left-radius: 0 !important;
 }
 
 .automizy-input2-bottom-label-box {
@@ -149,19 +181,6 @@
     white-space: nowrap;
     text-align: center;
     background-color: #f9fbfc;
-    /*
-    border: 1px solid #dfe8f1;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-top-right-radius: 0;
-    -webkit-border-top-right-radius: 0;
-    -moz-border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    -webkit-border-bottom-right-radius: 0;
-    -moz-border-bottom-right-radius: 0;
-    border-right: none;
-    */
     padding: 0 4px 0 4px;
 }
 
@@ -192,9 +211,6 @@
     background: #ffffff;
     padding: 0;
     color: #2b2f33;
-
-    border: 1px solid #dfe8f1;
-
     -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
     -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
     box-shadow: inset 1px 1px 3px #f6f6f6;
@@ -208,18 +224,6 @@
     white-space: nowrap;
     text-align: center;
     background-color: #f9fbfc;
-    /*
-    border: 1px solid #dfe8f1;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-top-left-radius: 0;
-    -webkit-border-top-left-radius: 0;
-    -moz-border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    -webkit-border-bottom-left-radius: 0;
-    -moz-border-bottom-left-radius: 0;
-    border-left: none;
-    */
 }
 
 .automizy-input2-icon-right-cell span {
@@ -263,24 +267,14 @@
 
 .automizy-input2-input:not(span) {
     width: 100%;
-    height: 34px;
+    height: 32px;
     box-sizing: border-box;
-    border-radius: 4px;
-    /*
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    */
     outline: none;
     font-size: 14px;
     background: #ffffff;
     padding: 6px 12px;
     color: #2b2f33;
-
     border: none;
-    /*
-    border: 1px solid #dfe8f1;
-    */
     -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
     -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
     box-shadow: inset 1px 1px 3px #f6f6f6;
@@ -298,26 +292,6 @@ textarea.automizy-input2-input {
     height: 80px;
 }
 
-/*Iconed inputs*/
-/*
-.automizy-input2-has-left-icon .automizy-input2-input {
-    border-top-left-radius: 0;
-    -webkit-border-top-left-radius: 0;
-    -moz-border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    -webkit-border-bottom-left-radius: 0;
-    -moz-border-bottom-left-radius: 0;
-}
-
-.automizy-input2-has-right-icon .automizy-input2-input {
-    border-top-right-radius: 0;
-    -webkit-border-top-right-radius: 0;
-    -moz-border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    -webkit-border-bottom-right-radius: 0;
-    -moz-border-bottom-right-radius: 0;
-}
-
 /*Buttoned inputs*/
 
 /*Left button*/
@@ -325,75 +299,10 @@ textarea.automizy-input2-input {
     white-space: nowrap;
 }
 
-/*
-.automizy-input2-has-left-button .automizy-input2-button-left-cell {
-    border-right: 1px solid #dfe8f1;
-}
-
-.automizy-input2-has-left-button input {
-    border-top-left-radius: 0;
-    -webkit-border-top-left-radius: 0;
-    -moz-border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    -webkit-border-bottom-left-radius: 0;
-    -moz-border-bottom-left-radius: 0;
-    border-left-width: 0;
-}
-
-.automizy-input2-has-left-button .automizy-input2-button-left-cell .automizy-button > a {
-    border-top-right-radius: 0;
-    -webkit-border-top-right-radius: 0;
-    -moz-border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    -webkit-border-bottom-right-radius: 0;
-    -moz-border-bottom-right-radius: 0;
-    border-right-width: 0;
-}
 
 /*Right button*/
 .automizy-input2-button-right-cell {
     white-space: nowrap;
-}
-
-/*
-.automizy-input2-has-right-button .automizy-input2-button-right-cell {
-    border-left: 1px solid #dfe8f1;
-}
-
-.automizy-input2-has-right-button input {
-    border-top-right-radius: 0;
-    -webkit-border-top-right-radius: 0;
-    -moz-border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    -webkit-border-bottom-right-radius: 0;
-    -moz-border-bottom-right-radius: 0;
-    border-right-width: 0;
-}
-
-.automizy-input2-has-right-button .automizy-input2-button-right-cell .automizy-button > a {
-    border-top-left-radius: 0;
-    -webkit-border-top-left-radius: 0;
-    -moz-border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    -webkit-border-bottom-left-radius: 0;
-    -moz-border-bottom-left-radius: 0;
-    border-left-width: 0;
-}
-*/
-.automizy-input2-top-button-box {
-
-}
-
-.automizy-input2-has-top-button .automizy-input2-top-button-box {
-
-}
-
-.automizy-input2-bottom-button-box {
-
-}
-
-.automizy-input2-has-bottom-button .automizy-input2-bottom-button-box {
-
 }
 
 /*showing measure*/
@@ -412,13 +321,11 @@ textarea.automizy-input2-input {
 
 /*input 2 colorpicker*/
 
-/*
-.automizy-input2.has-colorpicker input {
+.automizy-input2.automizy-input2-has-colorpicker input {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     border-right: none;
 }
-*/
 
 .automizy-input2 .automizy-input2-td.automizy-input2-colorpicker-input-cell {
     position: relative;
@@ -434,7 +341,7 @@ textarea.automizy-input2-input {
     outline: none;
     cursor: pointer;
     position: absolute;
-    top: -4px;
+    top: -5px;
     left: 0px;
     margin-left: -2px;
 }
@@ -445,12 +352,12 @@ textarea.automizy-input2-input {
     display: none;
 }
 
-.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell {
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner .automizy-input2-spinner-cell {
     display: table-cell;
 }
 
-.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-up,
-.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down {
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-up,
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down {
     box-sizing: border-box;
     border: none;
     color: #555a60;
@@ -458,24 +365,24 @@ textarea.automizy-input2-input {
     font-size: 12px;
     display: block;
     width: 30px;
-    height: 17px;
+    height: 16px;
     text-align: center;
     padding-top: 1px;
     cursor: pointer;
 }
 
-.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-up:hover,
-.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down:hover {
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-up:hover,
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down:hover {
     color: #2b2f33;
     background-color: #f3f3f9;
 }
 
-.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down {
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down {
     border-top: 1px solid #dfe8f1;
 }
 
-.automizy-input2[type="number"].has-custom-spinner input[type=number]::-webkit-inner-spin-button,
-.automizy-input2[type="number"].has-custom-spinner input[type=number]::-webkit-outer-spin-button {
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner input[type=number]::-webkit-inner-spin-button,
+.automizy-input2[type="number"].automizy-input2-has-custom-spinner input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
