--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -23,6 +23,16 @@
     box-sizing: border-box;
 }
 
+/*file upload*/
+.automizy-button .automizy-button-fileupload-input{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.01;
+}
+
 /*Nobox buttons*/
 .automizy-button.automizy-skin-nobox a{
     color:inherit;
