--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -20,6 +20,8 @@
 }
 .automizy-panel .automizy-panel-content{
     padding: 15px 20px;
+    margin: 0 auto;
+    max-width:100%;
 }
 
 .automizy-panel.automizy-skin-content-box{
