--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -17,6 +17,7 @@
     background-color: #FFFFFF;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    text-align: left;
 }
 .automizy-panel .automizy-panel-content{
     padding: 15px 20px;
