--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -75,6 +75,7 @@
 .automizy-input2-tr .automizy-input2-td {
     border: 1px solid #dfe8f1;
 }
+.automizy-input2[data-type="html"] .automizy-input2-tr .automizy-input2-td,
 .automizy-input2[data-type="radio"] .automizy-input2-tr .automizy-input2-td,
 .automizy-input2[data-type="checkbox"] .automizy-input2-tr .automizy-input2-td {
     border: none;
