--- a/src/styles/tag.css
+++ b/src/styles/tag.css
@@ -17,6 +17,7 @@
 .automizy-tag-table{
     width:100%;
     max-width: 100%;
+    table-layout: fixed;
 }
 
 .automizy-tag .automizy-tag-icon {
@@ -27,8 +28,12 @@
 }
 
 .automizy-tag .automizy-tag-text {
+    display: inline-block;
     box-sizing: border-box;
     vertical-align: middle;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .automizy-tag .automizy-tag-close {
