--- a/src/styles/instructionsNotification.css
+++ b/src/styles/instructionsNotification.css
@@ -12,7 +12,7 @@
     z-index:11001;
 }
 
-#automizy-instructions-notification-content {
+#automizy-instructions-notification-content-box {
     display:inline-block;
     width:450px;
     min-height:100px;
@@ -21,14 +21,41 @@
     left:calc(50% - 275px);
     top:calc(50% - 150px);
     z-index:11002;
-    padding:32px 32px 32px 32px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    border-radius: 2px;
 }
 
+
+
+#automizy-instructions-notification-content{
+    position: relative;
+    width:100%;
+}
+#automizy-instructions-notification-arrow{
+    width:50px;
+    height:50px;
+    background-color:#ffffff;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=5);
+    content: " ";
+    position: absolute;
+    box-shadow: 1px 2px 4px rgba(0,0,0,0.23);
+    z-index:1;
+}
+
+#automizy-instructions-notification-text-box{
+    position:relative;
+    background-color: #ffffff;
+    padding:32px 32px 100px 32px;
+    z-index:2;
+    height: 100%;
+    box-sizing: border-box;
+}
 #automizy-instructions-notification-content-table{
     width:100%;
     /*border: 1px solid #cccccc;*/
-    padding: 32px;
     box-sizing: border-box;
 }
 #automizy-instructions-notification-content-table-td1{
@@ -45,17 +72,23 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-#automizy-instructions-notification-content-text {
+#automizy-instructions-notification-content-title {
     display:inline-block;
+    font-weight: bold;
+    padding:0 0 6px 0;
+}
+#automizy-instructions-notification-content-text {
+    display:block;
 }
 
 #automizy-instructions-notification-content-buttons {
     display:block;
     box-sizing: border-box;
-    text-align: center;
-    width:100%;
+    text-align: right;
+    width:calc(100% - 152px);
     clear:both;
-}
-#automizy-instructions-notification-content-buttons .automizy-button {
-    margin-top:32px;
+    position: absolute;
+    bottom: 32px;
+    right: 32px;
+    z-index: 3;
 }
