--- a/src/automizy.css
+++ b/src/automizy.css
@@ -19,3 +19,4 @@
 @import url("styles/tag.css");
 @import url("styles/instructionsNotification.css");
 @import url("styles/loading.css");
+@import url("styles/popover.css");
