--- a/src/styles/message.css
+++ b/src/styles/message.css
@@ -29,13 +29,12 @@
 .automizy-message-container-cell{
     padding:10px 5px 10px 1px;
     text-align: left;
-    vertical-align: top;
+    vertical-align: middle;
 }
 .automizy-message-title{
     font-size: 16px;
     box-sizing: border-box;
     font-weight: bold;
-    padding:0 0 5px 0;
 }
 .automizy-message-content {
     text-align: left;
@@ -43,12 +42,19 @@
     opacity: 0.85;
     font-size: 13px;
     line-height: 1.4;
+    padding:5px 0 0 0;
+}
+.automizy-message-content:empty{
+    padding:0;
 }
 
 .automizy-message-close-cell {
     width:10px;
     text-align:right;
     vertical-align: top;
+}
+.automizy-message.automizy-disable-close .automizy-message-close-cell{
+    display:none;
 }
 .automizy-message-close {
     padding:10px;
