--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -76,6 +76,17 @@
     background: rgba(255,255,255,.2);
 }
 
+.automizy-panel.automizy-skin-bg-orange{
+    color: #ffffff;
+    border-color: #f24a15;
+    background-color: #FF5722;
+}
+.automizy-panel.automizy-skin-bg-orange .automizy-panel-title{
+    border: none;
+    color: #ffffff;
+    background: rgba(255,255,255,.2);
+}
+
 
 /*scrollbar design*/
 /*
