--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -5,7 +5,7 @@
     margin: 0;
     border-radius: 4px;
     background-color: #fff;
-    box-shadow: inset 0 -1px 1px rgba(0, 0, 0, .05);
+    /*box-shadow: inset 0 -1px 1px rgba(0, 0, 0, .05);*/
     overflow: hidden;
 }
 .automizy-panel .automizy-panel-title{
