--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -329,8 +329,8 @@
 
 
 .automizy-button.automizy-skin-bordered-orange a {
-    color:#e98604;
-    border: 2px solid #e98604;
+    color:#f46a1f;
+    border: 1px solid #f46a1f;
     background: #ffffff;
     padding: 4px 8px 4px 8px;
 }
