--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -168,7 +168,7 @@
     color:#555;
 }
 .automizy-select-option-table .automizy-select-option-tr:hover{
-    background-color: rgb( 244, 106, 31 );
+    background-color: #F46A1F;
     color:#FFFFFF;
     cursor:pointer;
 }
