--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -539,3 +539,11 @@
     background: #dddddd;
     height: 1px;
 }
+
+
+.automizy-custom-width .automizy-button-a{
+    width:100%;
+}
+.automizy-custom-width.automizy-has-dropdown .automizy-button-a{
+    width: calc(100% - 20px);
+}
