--- a/src/automizy.css
+++ b/src/automizy.css
@@ -20,3 +20,4 @@
 @import url("styles/instructionsNotification.css");
 @import url("styles/loading.css");
 @import url("styles/popover.css");
+@import url("styles/radio.css");
