--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -46,6 +46,7 @@
 }
 
 .automizy-input2-has-bottom-button .automizy-input2-label-before-box,
+.automizy-input2-has-bottom-content .automizy-input2-label-before-box,
 .automizy-input2[type="textarea"] .automizy-input2-label-before-box {
     vertical-align: top;
     padding: 8px 20px 8px 0;
@@ -353,7 +354,6 @@ textarea.automizy-input2-input {
     top: 0;
     left: 0;
     padding: 8px 10px;
-    color:#f46a1f;
     opacity: 0.9;
 }
 .automizy-input2.automizy-input2-has-inner-left-icon .automizy-input2-input-inner-icon-left{
