--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -1,11 +1,9 @@
 .automizy-select{   /*select field*/
-    border:1px solid rgba(0,0,0,0.15);
     box-sizing: border-box;
     display:inline-block;
     cursor:pointer;
     min-width:180px;
     vertical-align: middle;
-    box-sizing: border-box;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
@@ -24,6 +22,9 @@
     line-height: normal;
     font-weight: normal;
     position:relative;
+}
+.automizy-input2 .automizy-input2-input-cell .automizy-select{
+    border:none;
 }
 .automizy-select.automizy-active{
      border-color: #3da6ff;
@@ -66,8 +67,8 @@
 }
 .automizy-select .automizy-select-td-content{
     text-align:left;
-    vertical-align:middle;
-    padding: 6px;
+    vertical-align:top;
+    padding: 8px 12px;
     font-size:14px;
     width:100%;
     max-width: 1px;
@@ -205,11 +206,11 @@
     display: inline-block;
 }
 .automizy-select-option-table .automizy-select-option-tr .automizy-select-option-td-content{       /*option row content cell*/
-    vertical-align:middle;
-    padding:6px 0 6px 0;
+    vertical-align: middle;
     word-break: break-all;
-    font-size:14px;
-    width:100%;
+    font-size: 14px;
+    width: 100%;
+    height: 30px;
 }
 .automizy-select-option-table .automizy-select-option-tr.automizy-has-group .automizy-select-option-td-icon{
     padding:0 6px 0 26px;
