--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -43,6 +43,7 @@
 
 .automizy-button.automizy-skin-nobox-green a,
 .automizy-button.automizy-skin-nobox-blue a,
+.automizy-button.automizy-skin-nobox-black a,
 .automizy-button.automizy-skin-nobox-orange a {
     text-align: left;
     text-decoration: none;
@@ -59,6 +60,9 @@
 .automizy-button.automizy-skin-nobox-blue a {
     color: #2094f9;
 }
+.automizy-button.automizy-skin-nobox-black a {
+    color: #000000;
+}
 
 .automizy-button.automizy-skin-nobox-green a {
     color: #4CAF50;
@@ -67,6 +71,7 @@
 .automizy-button.automizy-skin-nobox a:hover,
 .automizy-button.automizy-skin-nobox-green a:hover,
 .automizy-button.automizy-skin-nobox-blue a:hover,
+.automizy-button.automizy-skin-nobox-black a:hover,
 .automizy-button.automizy-skin-nobox-orange a:hover {
     text-decoration: underline;
 }
