--- a/src/automizy.css
+++ b/src/automizy.css
@@ -21,3 +21,4 @@
 @import url("styles/loading.css");
 @import url("styles/popover.css");
 @import url("styles/radio.css");
+@import url("styles/specialTagger.css");
