--- a/src/automizy.css
+++ b/src/automizy.css
@@ -22,3 +22,4 @@
 @import url("styles/popover.css");
 @import url("styles/radio.css");
 @import url("styles/specialTagger.css");
+@import url("styles/customFieldFilter.css");
