--- a/src/automizy.css
+++ b/src/automizy.css
@@ -23,3 +23,4 @@
 @import url("styles/radio.css");
 @import url("styles/specialTagger.css");
 @import url("styles/customFieldFilter.css");
+@import url("styles/columnContent.css");
