--- a/src/styles/columnContent.css
+++ b/src/styles/columnContent.css
@@ -34,6 +34,7 @@
 
 .automizy-column-content-column-table{
     width:100%;
+    height: 100%;
 }
 .automizy-column-content-column-tr{
 
@@ -52,6 +53,7 @@
 .automizy-column-content-column .automizy-column-content-column-td-top{
     text-align: left;
     vertical-align: top;
+    height:1px;
 }
 .automizy-column-content-column.automizy-has-title .automizy-column-content-column-tr-top,
 .automizy-column-content-column.automizy-has-subtitle .automizy-column-content-column-tr-top{
@@ -76,6 +78,7 @@
 .automizy-column-content-column .automizy-column-content-column-td-bottom{
     text-align: left;
     vertical-align: top;
+    height:1px;
 }
 .automizy-column-content-column.automizy-has-footer .automizy-column-content-column-tr-bottom{
     display:table-row;
@@ -85,10 +88,15 @@
 }
 
 .automizy-column-content-column .automizy-column-content-column-title{
-
+    font-size: 18px;
+    font-weight: bold;
+    color: #4a4a4a;
 }
 .automizy-column-content-column .automizy-column-content-column-subtitle{
-
+    font-size: 14px;
+    font-weight: bold;
+    color: #4a4a4a;
+    padding: 4px 0 4px 0;
 }
 .automizy-column-content-column .automizy-column-content-column-content{
 
