--- a/src/styles/columnContent.css
+++ b/src/styles/columnContent.css
@@ -19,6 +19,8 @@
     transition-property: width, padding-left, padding-right;
     text-align: left;
     overflow: hidden;
+    box-sizing: border-box;
+    height: 100%;
 }
 .automizy-column-content-column.automizy-disable-animate{
     -webkit-transition-property: none !important;
