--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -80,6 +80,7 @@
 .automizy-button.automizy-skin-bordered-green a,
 .automizy-button.automizy-skin-bordered-black a,
 .automizy-button.automizy-skin-bordered-orange a,
+.automizy-button.automizy-skin-bordered-blue a,
 .automizy-button.automizy-skin-simple-likemenu a,
 .automizy-button.automizy-skin-simple-white a,
 .automizy-button.automizy-skin-image-white a,
@@ -122,6 +123,7 @@
 .automizy-button.automizy-skin-bordered-green.automizy-button-semithin a,
 .automizy-button.automizy-skin-bordered-black.automizy-button-semithin a,
 .automizy-button.automizy-skin-bordered-orange.automizy-button-semithin a,
+.automizy-button.automizy-skin-bordered-blue.automizy-button-semithin a,
 .automizy-button.automizy-skin-simple-likemenu.automizy-button-semithin a,
 .automizy-button.automizy-skin-simple-white.automizy-button-semithin a,
 .automizy-button.automizy-skin-image-white.automizy-button-semithin a,
@@ -136,6 +138,7 @@
 .automizy-button.automizy-skin-bordered-green.automizy-button-thin a,
 .automizy-button.automizy-skin-bordered-black.automizy-button-thin a,
 .automizy-button.automizy-skin-bordered-orange.automizy-button-thin a,
+.automizy-button.automizy-skin-bordered-blue.automizy-button-thin a,
 .automizy-button.automizy-skin-simple-likemenu.automizy-button-thin a,
 .automizy-button.automizy-skin-simple-white.automizy-button-thin a,
 .automizy-button.automizy-skin-image-white.automizy-button-thin a,
@@ -150,6 +153,7 @@
 .automizy-button.automizy-skin-bordered-green.automizy-button-thinner a,
 .automizy-button.automizy-skin-bordered-black.automizy-button-thinner a,
 .automizy-button.automizy-skin-bordered-orange.automizy-button-thinner a,
+.automizy-button.automizy-skin-bordered-blue.automizy-button-thinner a,
 .automizy-button.automizy-skin-simple-likemenu.automizy-button-thinner a,
 .automizy-button.automizy-skin-simple-white.automizy-button-thinner a,
 .automizy-button.automizy-skin-image-white.automizy-button-thinner a,
@@ -164,6 +168,7 @@
 .automizy-button.automizy-skin-bordered-green.automizy-button-semithick a,
 .automizy-button.automizy-skin-bordered-black.automizy-button-semithick a,
 .automizy-button.automizy-skin-bordered-orange.automizy-button-semithick a,
+.automizy-button.automizy-skin-bordered-blue.automizy-button-semithick a,
 .automizy-button.automizy-skin-simple-likemenu.automizy-button-semithick a,
 .automizy-button.automizy-skin-simple-white.automizy-button-semithick a,
 .automizy-button.automizy-skin-image-white.automizy-button-semithick a,
@@ -181,6 +186,7 @@
 .automizy-button.automizy-skin-bordered-green.automizy-button-thick a,
 .automizy-button.automizy-skin-bordered-black.automizy-button-thick a,
 .automizy-button.automizy-skin-bordered-orange.automizy-button-thick a,
+.automizy-button.automizy-skin-bordered-blue.automizy-button-thick a,
 .automizy-button.automizy-skin-simple-likemenu.automizy-button-thick a,
 .automizy-button.automizy-skin-simple-white.automizy-button-thick a,
 .automizy-button.automizy-skin-image-white.automizy-button-thick a,
@@ -207,6 +213,7 @@
 .automizy-button.automizy-skin-bordered-green a:active,
 .automizy-button.automizy-skin-bordered-black a:active,
 .automizy-button.automizy-skin-bordered-orange a:active,
+.automizy-button.automizy-skin-bordered-blue a:active,
 .automizy-button.automizy-skin-simple-likemenu a:active,
 .automizy-button.automizy-skin-simple-white a:active,
 .automizy-button.automizy-skin-simple-green a:active,
@@ -356,6 +363,22 @@
     color: #e98604;
 }
 .automizy-button.disabled.automizy-skin-bordered-orange a {
+    opacity:0.5;
+}
+
+
+
+
+.automizy-button.automizy-skin-bordered-blue a {
+    color:#2094f9;
+    border: 1px solid #2094f9;
+    background: #ffffff;
+}
+.automizy-button.automizy-skin-bordered-blue a:hover,
+.automizy-input-box input[type="file"]:hover + span .automizy-skin-bordered-blue a {
+    color: #2094f9;
+}
+.automizy-button.disabled.automizy-skin-bordered-blue a {
     opacity:0.5;
 }
 
