--- a/src/automizy.css
+++ b/src/automizy.css
@@ -24,3 +24,5 @@
 @import url("styles/specialTagger.css");
 @import url("styles/customFieldFilter.css");
 @import url("styles/columnContent.css");
+@import url("styles/mockup.css");
+@import url("styles/list.css");
