--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -20,6 +20,8 @@
     z-index:-10 !important;
     width:0 !important;
     height:0 !important;
+    min-width:0 !important;
+    min-height:0 !important;
     color:transparent !important;
     font-size:0 !important;
     line-height:0 !important;
