--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -44,6 +44,7 @@
 .automizy-button.automizy-skin-nobox-green a,
 .automizy-button.automizy-skin-nobox-blue a,
 .automizy-button.automizy-skin-nobox-black a,
+.automizy-button.automizy-skin-nobox-white a,
 .automizy-button.automizy-skin-nobox-orange a {
     text-align: left;
     text-decoration: none;
@@ -63,6 +64,9 @@
 .automizy-button.automizy-skin-nobox-black a {
     color: #000000;
 }
+.automizy-button.automizy-skin-nobox-white a {
+    color: #ffffff;
+}
 
 .automizy-button.automizy-skin-nobox-green a {
     color: #4CAF50;
@@ -72,6 +76,7 @@
 .automizy-button.automizy-skin-nobox-green a:hover,
 .automizy-button.automizy-skin-nobox-blue a:hover,
 .automizy-button.automizy-skin-nobox-black a:hover,
+.automizy-button.automizy-skin-nobox-white a:hover,
 .automizy-button.automizy-skin-nobox-orange a:hover {
     text-decoration: underline;
 }
