--- a/src/automizy.css
+++ b/src/automizy.css
@@ -23,6 +23,7 @@
 @import url("styles/radio.css");
 @import url("styles/specialTagger.css");
 @import url("styles/customFieldFilter.css");
+@import url("styles/customFieldUpdater.css");
 @import url("styles/columnContent.css");
 @import url("styles/mockup.css");
 @import url("styles/list.css");
