--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -616,7 +616,14 @@
 }
 
 
+.automizy-button-box{
+    white-space: nowrap;
+}
+.automizy-button-box .fa{
+    padding: 0 7px;
+}
 .automizy-button-dropdown-button{
+    display: inline !important;
     margin: 0 0 0 -3px !important;
     min-width: 23px !important;
     width: 23px !important;
